# UrbanComputing

./: .env.example  .gitignore  API_DOCUMENTATION.md  BILLING_MODULE_DOCUMENTATION.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  Energy_Dashboard_Presentation.pptx  FINAL_PRESENTATION.md  PRESENTATION_SLIDES.md  PROJECT_COMPLETION_REPORT.md  PROJECT_IMPROVEMENTS.md  QUALITY_IMPROVEMENTS.md  QUICK_PRESENTATION_15MIN.pptx  README.md  REALISTIC_ENHANCEMENTS.md  add_screenshots.py  app.py  debug.py  entsoepreviouscode.txt  evaluation_responses.db  generate_presentation.py  generate_quick_presentation.py  pyproject.toml  requirements.txt  test_billing.py
app/: billing_analyzer.py  config.py  entsoe_client.py  evaluation_manager.py  fuzzy_billing.py  fuzzy_explainer.py  fuzzy_explainer_backup.py  logger_utils.py  predictor.py  reason_extractor.py
data/: generate_sample_data.py
docs/: project_report_part1.tex  project_report_part2.tex
tests/: test_predictor.py
